Fixing some spacing issues with the info paragraph.

--- a/css/general.css
+++ b/css/general.css
@@ -204,7 +204,9 @@ h3 {
 }
 
 .infoinfo {
-  margin: 2rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  margin-bottom: 3rem; 
 }
 
 .port-title {
@@ -278,6 +280,12 @@ h3 {
     margin-top: -1.3rem;
     margin-bottom: 0;
   }
+  
+    .infoinfo {
+      margin-left: 6rem;
+      margin-right: 6rem;
+      margin-bottom: 3rem; 
+    }
 }
 
 @media only screen and (min-width: 60em) {
@@ -371,10 +379,10 @@ h3 {
   
   .infoinfo {
     text-align: left;
+    margin-right: 17rem;
   }
   
   .main {
     margin-bottom: 4rem;
-  }
-    
+  }   
 }
